[gd_scene load_steps=2 format=3 uid="uid://wx8lo8s4xl1f"]

[ext_resource type="Script" path="res://scripts/static/menu/main_menu.gd" id="1_7xtd3"]

[node name="Main menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7xtd3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -50.5
offset_right = 60.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="BtnNewGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New game"

[node name="BtnTestmap" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="BtnDanyasmap" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Danya's map"

[node name="BtnCavemap" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Cave map"

[node name="BtnAboutAuthors" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "About authors"

[node name="BtnQuit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit
"

[connection signal="pressed" from="VBoxContainer/BtnNewGame" to="." method="_on_btn_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnTestmap" to="." method="_on_btn_testmap_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnDanyasmap" to="." method="_on_btn_danyasmap_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnCavemap" to="." method="_on_btn_cavemap_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnAboutAuthors" to="." method="_on_btn_about_authors_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnQuit" to="." method="_on_btn_quit_pressed"]
